--- a/mmpfn/run_salary_multimodal.ipynb
+++ b/mmpfn/run_salary_multimodal.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7cb31173",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wall/anaconda3/envs/mmpfn/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/swiglu_ffn.py:51: UserWarning: xFormers is not available (SwiGLU)\n",
+      "  warnings.warn(\"xFormers is not available (SwiGLU)\")\n",
+      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/attention.py:33: UserWarning: xFormers is not available (Attention)\n",
+      "  warnings.warn(\"xFormers is not available (Attention)\")\n",
+      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/block.py:40: UserWarning: xFormers is not available (Block)\n",
+      "  warnings.warn(\"xFormers is not available (Block)\")\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import annotations\n",
     "\n",
@@ -27,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cb73c353",
    "metadata": {},
    "outputs": [],
@@ -38,10 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6a312084",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load embeddings from embeddings/salary/salary.pt\n"
+     ]
+    }
+   ],
    "source": [
     "data_path = os.path.join(os.getenv('HOME'), \"works/research/MultiModalPFN/mmpfn/data/salary\")\n",
     "dataset = SalaryDataset(data_path)\n",
@@ -50,13 +73,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "15dce1ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fine-tuning Steps:  13%|█▎        | 13/100 [00:18<02:15,  1.56s/it, Best Val. Loss=1.24, Best Val. Score=-1.24, Training Loss=1.32, Val. Loss=1.24, Patience=38, Utilization=0, Grad Norm=15.6][2025-09-17 22:44:31,641] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps:  38%|███▊      | 38/100 [00:55<01:31,  1.48s/it, Best Val. Loss=1.22, Best Val. Score=-1.22, Training Loss=1.25, Val. Loss=1.22, Patience=14, Utilization=0, Grad Norm=5.95][2025-09-17 22:45:08,192] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps:  78%|███████▊  | 78/100 [01:54<00:32,  1.48s/it, Best Val. Loss=1.21, Best Val. Score=-1.21, Training Loss=1.25, Val. Loss=1.21, Patience=-25, Utilization=0, Grad Norm=6.78][2025-09-17 22:46:07,599] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps: 101it [02:27,  1.47s/it, Best Val. Loss=1.21, Best Val. Score=-1.21, Training Loss=1.24, Val. Loss=1.21, Patience=-47, Utilization=0, Grad Norm=3.76]                         \n",
+      "[2025-09-17 22:46:39,443] INFO - Initial Validation Loss: 1.2941220260725415 Best Validation Loss: 1.206101748622334 Total Steps: 101 Best Step: 99 Total Time Spent: 148.82760667800903\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score (Finetuned): 0.46458333333333335\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fine-tuning Steps:  10%|█         | 10/100 [00:13<02:13,  1.49s/it, Best Val. Loss=1.21, Best Val. Score=-1.21, Training Loss=1.21, Val. Loss=1.21, Patience=41, Utilization=0, Grad Norm=11.2][2025-09-17 22:46:56,456] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps:  19%|█▉        | 19/100 [00:26<02:00,  1.48s/it, Best Val. Loss=1.2, Best Val. Score=-1.2, Training Loss=1.24, Val. Loss=1.2, Patience=33, Utilization=0, Grad Norm=4.85]   [2025-09-17 22:47:09,286] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps: 101it [02:24,  1.44s/it, Best Val. Loss=1.19, Best Val. Score=-1.19, Training Loss=1.17, Val. Loss=1.19, Patience=-48, Utilization=0, Grad Norm=6.57]                         \n",
+      "[2025-09-17 22:49:06,349] INFO - Initial Validation Loss: 1.279693744765703 Best Validation Loss: 1.1887137045973468 Total Steps: 101 Best Step: 81 Total Time Spent: 144.89250087738037\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score (Finetuned): 0.45416666666666666\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fine-tuning Steps:   6%|▌         | 6/100 [00:07<02:17,  1.46s/it, Best Val. Loss=1.25, Best Val. Score=-1.25, Training Loss=1.23, Val. Loss=1.28, Patience=45, Utilization=0, Grad Norm=5.73][2025-09-17 22:49:17,218] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps:   9%|▉         | 9/100 [00:11<02:05,  1.38s/it, Best Val. Loss=1.25, Best Val. Score=-1.25, Training Loss=1.26, Val. Loss=1.48, Patience=43, Utilization=0, Grad Norm=9.13][2025-09-17 22:49:21,151] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps: 101it [02:24,  1.44s/it, Best Val. Loss=1.24, Best Val. Score=-1.24, Training Loss=1.14, Val. Loss=1.36, Patience=-48, Utilization=0, Grad Norm=5.76]                         \n",
+      "[2025-09-17 22:51:33,058] INFO - Initial Validation Loss: 1.3121701039054423 Best Validation Loss: 1.239178009383676 Total Steps: 101 Best Step: 25 Total Time Spent: 144.81754994392395\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score (Finetuned): 0.43020833333333336\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fine-tuning Steps:   3%|▎         | 3/100 [00:03<02:32,  1.57s/it, Best Val. Loss=1.25, Best Val. Score=-1.25, Training Loss=1.28, Val. Loss=1.25, Patience=48, Utilization=0, Grad Norm=12.1][2025-09-17 22:51:39,798] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps:   5%|▌         | 5/100 [00:05<02:11,  1.38s/it, Best Val. Loss=1.25, Best Val. Score=-1.25, Training Loss=1.29, Val. Loss=1.25, Patience=47, Utilization=0, Grad Norm=7.42][2025-09-17 22:51:42,319] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps: 101it [02:25,  1.45s/it, Best Val. Loss=1.22, Best Val. Score=-1.22, Training Loss=1.14, Val. Loss=1.22, Patience=-48, Utilization=0, Grad Norm=4.32]                         \n",
+      "[2025-09-17 22:54:01,013] INFO - Initial Validation Loss: 1.3086846813533153 Best Validation Loss: 1.2231575049721817 Total Steps: 101 Best Step: 95 Total Time Spent: 146.00294375419617\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score (Finetuned): 0.4510416666666667\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fine-tuning Steps:   3%|▎         | 3/100 [00:02<02:24,  1.49s/it, Best Val. Loss=1.23, Best Val. Score=-1.23, Training Loss=1.3, Val. Loss=1.23, Patience=48, Utilization=0, Grad Norm=6.58] [2025-09-17 22:54:07,490] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps:  11%|█         | 11/100 [00:14<02:12,  1.49s/it, Best Val. Loss=1.22, Best Val. Score=-1.22, Training Loss=1.15, Val. Loss=1.22, Patience=41, Utilization=0, Grad Norm=4.55][2025-09-17 22:54:18,987] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps:  25%|██▌       | 25/100 [00:34<01:50,  1.47s/it, Best Val. Loss=1.2, Best Val. Score=-1.2, Training Loss=1.16, Val. Loss=1.2, Patience=28, Utilization=0, Grad Norm=4.49]   [2025-09-17 22:54:39,293] INFO - \n",
+      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
+      "Fine-tuning Steps: 101it [02:24,  1.45s/it, Best Val. Loss=1.19, Best Val. Score=-1.19, Training Loss=1.14, Val. Loss=1.2, Patience=-47, Utilization=0, Grad Norm=3.85]                         \n",
+      "[2025-09-17 22:56:28,415] INFO - Initial Validation Loss: 1.301734415202324 Best Validation Loss: 1.1943799905720869 Total Steps: 101 Best Step: 67 Total Time Spent: 145.5081524848938\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score (Finetuned): 0.4479166666666667\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy_scores = []\n",
-    "for seed in range(1):\n",
+    "for seed in range(5):\n",
     "    torch.manual_seed(seed)\n",
     "    train_len = int(len(dataset) * 0.8)\n",
     "    test_len = len(dataset) - train_len\n",
@@ -100,7 +223,7 @@
     "        logger_level=0,  # Shows all logs, higher values shows less\n",
     "        freeze_input=True,  # Freeze the input layers (encoder and y_encoder) during finetuning\n",
     "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
-    "        mgm_heads=32,\n",
+    "        mgm_heads=8,\n",
     "        cqam_heads=4,\n",
     "    )\n",
     "\n",
@@ -116,7 +239,7 @@
     "        inference_config=no_preprocessing_inference_config,\n",
     "        ignore_pretraining_limits=True,\n",
     "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
-    "        mgm_heads=32,\n",
+    "        mgm_heads=8,\n",
     "        cqam_heads=4,\n",
     "    )\n",
     "\n",
@@ -128,10 +251,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0f99d1c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Accuracy: 0.4495833333333333\n",
+      "Std Accuracy: 0.011191980015469406\n"
+     ]
+    }
+   ],
    "source": [
     "# get mean and std of accuracy scores\n",
     "mean_accuracy = np.mean(accuracy_scores)\n",
@@ -139,6 +271,35 @@
     "print(\"Mean Accuracy:\", mean_accuracy)\n",
     "print(\"Std Accuracy:\", std_accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c7262546",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.45868055555555554"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.459375+0.46145833333333336+0.4552083333333333)/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e329768",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
