--- a/mmpfn/run_cbis_ddsm_calc_multimodal.ipynb
+++ b/mmpfn/run_cbis_ddsm_calc_multimodal.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5dd5c4c7",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done\n"
+      "Image /home/wall/works/research/MultiModalPFN/mmpfn/data/cbis_ddsm/jpeg/1.3.6.1.4.1.9590.100.1.2.348822970413183698610798947061334416506 does not exist, skipping.\n",
+      "Image /home/wall/works/research/MultiModalPFN/mmpfn/data/cbis_ddsm/jpeg/1.3.6.1.4.1.9590.100.1.2.348822970413183698610798947061334416506 does not exist, skipping.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "all input arrays must have the same shape",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m _ \u001b[38;5;241m=\u001b[39m test_dataset\u001b[38;5;241m.\u001b[39mget_embeddings(mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      9\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m CBISDDSMDataset(data_path\u001b[38;5;241m=\u001b[39mdata_path, data_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcsv/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkind\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_case_description_train_set.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, kind\u001b[38;5;241m=\u001b[39mkind, image_type\u001b[38;5;241m=\u001b[39mimage_type)\n\u001b[0;32m---> 10\u001b[0m _ \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_dataset\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m _ \u001b[38;5;241m=\u001b[39m train_dataset\u001b[38;5;241m.\u001b[39mget_embeddings(mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/works/research/MultiModalPFN/mmpfn/datasets/cbis_ddsm.py:71\u001b[0m, in \u001b[0;36mCBISDDSMDataset.get_images\u001b[0;34m(self, img_size)\u001b[0m\n\u001b[1;32m     68\u001b[0m             image_set\u001b[38;5;241m.\u001b[39mappend(img)\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimages\u001b[38;5;241m.\u001b[39mappend(image_set)\n\u001b[0;32m---> 71\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimages \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstack\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimages\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# (B, N, H, W, C)\u001b[39;00m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimages \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mfrom_numpy(np\u001b[38;5;241m.\u001b[39mtranspose(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimages, (\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)))\u001b[38;5;241m.\u001b[39mfloat() \u001b[38;5;66;03m# (B, N, C, H, W)\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimages \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m255.0\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/envs/mmpfn/lib/python3.10/site-packages/numpy/_core/shape_base.py:460\u001b[0m, in \u001b[0;36mstack\u001b[0;34m(arrays, axis, out, dtype, casting)\u001b[0m\n\u001b[1;32m    458\u001b[0m shapes \u001b[38;5;241m=\u001b[39m {arr\u001b[38;5;241m.\u001b[39mshape \u001b[38;5;28;01mfor\u001b[39;00m arr \u001b[38;5;129;01min\u001b[39;00m arrays}\n\u001b[1;32m    459\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(shapes) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 460\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mall input arrays must have the same shape\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    462\u001b[0m result_ndim \u001b[38;5;241m=\u001b[39m arrays[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    463\u001b[0m axis \u001b[38;5;241m=\u001b[39m normalize_axis_index(axis, result_ndim)\n",
+      "\u001b[0;31mValueError\u001b[0m: all input arrays must have the same shape"
      ]
     }
    ],
@@ -71,10 +85,10 @@
     "kind = 'calc'  # mass calc\n",
     "image_type = 'all' # all full crop roi\n",
     "test_dataset = CBISDDSMDataset(data_path=data_path, data_name=f'csv/{kind}_case_description_test_set.csv', kind=kind, image_type=image_type)\n",
-    "# _ = test_dataset.get_images()\n",
+    "_ = test_dataset.get_images()\n",
     "_ = test_dataset.get_embeddings(mode='test')\n",
     "train_dataset = CBISDDSMDataset(data_path=data_path, data_name=f'csv/{kind}_case_description_train_set.csv', kind=kind, image_type=image_type)\n",
-    "# _ = train_dataset.get_images()\n",
+    "_ = train_dataset.get_images()\n",
     "_ = train_dataset.get_embeddings(mode='train')"
    ]
   },
@@ -125,7 +139,7 @@
     }
    ],
    "source": [
-    "accuracy_scores, auc_ovrs, auc_ovos = [], [], []\n",
+    "accuracy_scores, aucs = [], []\n",
     "for seed in range(5):\n",
     "    torch.manual_seed(seed)\n",
     "\n",
@@ -145,7 +159,7 @@
     "\n",
     "    torch.cuda.empty_cache()\n",
     "\n",
-    "    save_path_to_fine_tuned_model = \"./finetuned_mmpfn_pad_ufes_20.ckpt\"\n",
+    "    save_path_to_fine_tuned_model = \"./finetuned_mmpfn_cbis_calc.ckpt\"\n",
     "    \n",
     "    fine_tune_mmpfn(\n",
     "        # path_to_base_model=\"auto\",\n",
@@ -167,7 +181,7 @@
     "        freeze_input=True,  # Freeze the input layers (encoder and y_encoder) during finetuning\n",
     "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
     "        mgm_heads=8,\n",
-    "        cqam_heads=4,\n",
+    "        cqam_heads=8,\n",
     "    )\n",
     "\n",
     "    # disables preprocessing at inference time to match fine-tuning\n",
@@ -183,7 +197,7 @@
     "        ignore_pretraining_limits=True,\n",
     "        mixer_type='MGM+CQAM', # no_append token_append split_append multihead\n",
     "        mgm_heads=8,\n",
-    "        cqam_heads=4,\n",
+    "        cqam_heads=8,\n",
     "    )\n",
     "\n",
     "    clf_finetuned = model_finetuned.fit(X_train, image_train, y_train)\n",
@@ -191,11 +205,8 @@
     "    print(\"accuracy_score (Finetuned):\", acc_score)\n",
     "    accuracy_scores.append(acc_score)\n",
     "    \n",
-    "    # auc_ovr = roc_auc_score(y_test, clf_finetuned.predict_proba(X_test, image_test), multi_class='ovr')\n",
-    "    # auc_ovrs.append(auc_ovr)\n",
-    "    \n",
-    "    # auc_ovo = roc_auc_score(y_test, clf_finetuned.predict_proba(X_test, image_test), multi_class='ovo')\n",
-    "    # auc_ovos.append(auc_ovo)c:\\Users\\SuyeonWall\\Downloads\\breast-cancer-imageclassification.ipynb"
+    "    aucs.append(roc_auc_score(y_test, clf_finetuned.predict_proba(X_test, image_test)[:,1]))\n",
+    "    "
    ]
   },
   {
@@ -219,16 +230,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mean_ovr = np.mean(auc_ovrs)\n",
-    "# std_ovr = np.std(auc_ovrs)\n",
+    "mean_auc = np.mean(aucs)\n",
+    "std_auc = np.std(aucs)\n",
     "\n",
-    "# mean_ovo = np.mean(auc_ovos)\n",
-    "# std_ovo = np.std(auc_ovos)\n",
-    "\n",
-    "# print(\"Mean AUC OVR:\", mean_ovr)\n",
-    "# print(\"Std AUC OVR:\", std_ovr)\n",
-    "# print(\"Mean AUC OVO:\", mean_ovo)\n",
-    "# print(\"Std AUC OVO:\", std_ovo)"
+    "print(\"Mean AUC:\", mean_auc)\n",
+    "print(\"Std AUC:\", std_auc)"
    ]
   }
  ],
