--- a/mmpfn/run_cbis_ddsm_mass_multimodal.ipynb
+++ b/mmpfn/run_cbis_ddsm_mass_multimodal.ipynb
@@ -15,7 +15,9 @@
       "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/attention.py:33: UserWarning: xFormers is not available (Attention)\n",
       "  warnings.warn(\"xFormers is not available (Attention)\")\n",
       "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/block.py:40: UserWarning: xFormers is not available (Block)\n",
-      "  warnings.warn(\"xFormers is not available (Block)\")\n"
+      "  warnings.warn(\"xFormers is not available (Block)\")\n",
+      "/home/wall/anaconda3/envs/mmpfn2/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -60,7 +62,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done\n"
+      "Load embeddings from embeddings/cbis_ddsm/mass_test_all.pt\n",
+      "Load embeddings from embeddings/cbis_ddsm/mass_train_all.pt\n"
      ]
     }
    ],
@@ -71,10 +74,10 @@
     "kind = 'mass'  # mass calc\n",
     "image_type = 'all' # all full crop roi\n",
     "test_dataset = CBISDDSMDataset(data_path=data_path, data_name=f'csv/{kind}_case_description_test_set.csv', kind=kind, image_type=image_type)\n",
-    "_ = test_dataset.get_images()\n",
+    "# _ = test_dataset.get_images()\n",
     "_ = test_dataset.get_embeddings(mode='test')\n",
     "train_dataset = CBISDDSMDataset(data_path=data_path, data_name=f'csv/{kind}_case_description_train_set.csv', kind=kind, image_type=image_type)\n",
-    "_ = train_dataset.get_images()\n",
+    "# _ = train_dataset.get_images()\n",
     "_ = train_dataset.get_embeddings(mode='train')"
    ]
   },
@@ -234,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mmpfn",
+   "display_name": "mmpfn2",
    "language": "python",
    "name": "python3"
   },
