--- a/mmpfn/run_cloth_text_head.ipynb
+++ b/mmpfn/run_cloth_text_head.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8292ed9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wall/anaconda3/envs/mmpfn/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/swiglu_ffn.py:51: UserWarning: xFormers is not available (SwiGLU)\n",
+      "  warnings.warn(\"xFormers is not available (SwiGLU)\")\n",
+      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/attention.py:33: UserWarning: xFormers is not available (Attention)\n",
+      "  warnings.warn(\"xFormers is not available (Attention)\")\n",
+      "/home/wall/works/research/MultiModalPFN/mmpfn/models/dino_v2/layers/block.py:40: UserWarning: xFormers is not available (Block)\n",
+      "  warnings.warn(\"xFormers is not available (Block)\")\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import annotations\n",
     "\n",
@@ -28,10 +43,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5dd5c4c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/wall/works/research/MultiModalPFN/mmpfn/datasets/cloth.py:55: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  self.embeddings = torch.load(path)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Load embeddings from embeddings/cloth/cloth.pt\n"
+     ]
+    }
+   ],
    "source": [
     "# data_path = os.path.join(os.getenv('HOME'), \"workspace/works/tabular_image/MultiModalPFN/mmpfn/data/cloth\")\n",
     "data_path = os.path.join(os.getenv('HOME'), \"works/research/MultiModalPFN/mmpfn/data/cloth\")\n",
@@ -41,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "384f2c25",
    "metadata": {},
    "outputs": [],
@@ -62,10 +93,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "31e03c20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1489/2224172689.py:80: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  best_model.load_state_dict(torch.load(best_model_path))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy 0.6067746686303387\n",
+      "accuracy 0.6273932253313697\n",
+      "accuracy 0.6097201767304861\n",
+      "accuracy 0.6369661266568483\n",
+      "accuracy 0.6008836524300442\n"
+     ]
+    }
+   ],
    "source": [
     "accuracy_scores = []\n",
     "n_epochs = 200\n",
@@ -164,30 +215,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a3c58d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preds.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "945ef713",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ys.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "33aa39dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Accuracy: 0.6163475699558174\n",
+      "Std Accuracy: 0.01357812143931205\n"
+     ]
+    }
+   ],
    "source": [
     "# get mean and std of accuracy scores\n",
     "mean_accuracy = np.mean(accuracy_scores)\n",
