--- a/mmpfn/old_scripts/run_pad_ufes_20_multimodal.ipynb
+++ b/mmpfn/old_scripts/run_pad_ufes_20_multimodal.ipynb
@@ -39,7 +39,7 @@
     "from mmpfn.models.mmpfn_v2 import MMPFNClassifier\n",
     "from mmpfn.models.mmpfn_v2.constants import ModelInterfaceConfig\n",
     "from mmpfn.models.mmpfn_v2.preprocessing import PreprocessorConfig\n",
-    "from mmpfn.scripts_finetune_mm.finetune_tabpfn_main import fine_tune_mmpfn"
+    "from mmpfn.scripts_finetune_mm.finetune_mmpfn_main import fine_tune_mmpfn"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "868f0040",
    "metadata": {},
    "outputs": [
@@ -84,103 +84,53 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fine-tuning Steps:   4%|▍         | 4/100 [00:06<03:35,  2.25s/it, Best Val. Loss=0.521, Best Val. Score=-0.521, Training Loss=0.508, Val. Loss=0.521, Patience=47, Utilization=0, Grad Norm=8.58][2025-09-23 23:31:15,168] INFO - \n",
+      "Fine-tuning Steps:   8%|▊         | 8/100 [00:18<03:53,  2.54s/it, Best Val. Loss=0.541, Best Val. Score=-0.541, Training Loss=0.618, Val. Loss=0.567, Patience=43, Utilization=0, Grad Norm=6.88][2025-10-07 22:49:33,876] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  17%|█▋        | 17/100 [00:29<02:25,  1.75s/it, Best Val. Loss=0.482, Best Val. Score=-0.482, Training Loss=0.502, Val. Loss=0.49, Patience=35, Utilization=0, Grad Norm=9.08] [2025-09-23 23:31:38,201] INFO - \n",
+      "Fine-tuning Steps:  20%|██        | 20/100 [00:45<03:06,  2.33s/it, Best Val. Loss=0.541, Best Val. Score=-0.541, Training Loss=0.498, Val. Loss=0.547, Patience=32, Utilization=0, Grad Norm=9]   [2025-10-07 22:50:00,871] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [02:44,  1.65s/it, Best Val. Loss=0.471, Best Val. Score=-0.471, Training Loss=0.397, Val. Loss=0.543, Patience=-48, Utilization=0, Grad Norm=8.44]                         \n",
-      "[2025-09-23 23:33:51,993] INFO - Initial Validation Loss: 0.5660938875519983 Best Validation Loss: 0.4705977997870326 Total Steps: 101 Best Step: 36 Total Time Spent: 168.80583572387695\n"
+      "Fine-tuning Steps: 101it [04:03,  2.43s/it, Best Val. Loss=0.519, Best Val. Score=-0.519, Training Loss=0.403, Val. Loss=0.535, Patience=-48, Utilization=0, Grad Norm=10.5]                         \n",
+      "[2025-10-07 22:53:17,158] INFO - Initial Validation Loss: 0.5909833408115309 Best Validation Loss: 0.5194899919954977 Total Steps: 101 Best Step: 86 Total Time Spent: 247.18138122558594\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy_score (Finetuned): 0.8652173913043478\n"
+      "accuracy_score (Finetuned): 0.8739130434782608\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fine-tuning Steps:   2%|▏         | 2/100 [00:02<03:41,  2.26s/it, Best Val. Loss=0.59, Best Val. Score=-0.59, Training Loss=0.524, Val. Loss=0.59, Patience=49, Utilization=0, Grad Norm=6.91][2025-09-23 23:34:00,366] INFO - \n",
+      "Fine-tuning Steps:   1%|          | 1/100 [00:00<?, ?it/s][2025-10-07 22:53:26,579] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  22%|██▏       | 22/100 [00:38<02:33,  1.97s/it, Best Val. Loss=0.521, Best Val. Score=-0.521, Training Loss=0.468, Val. Loss=0.521, Patience=30, Utilization=0, Grad Norm=9.84][2025-09-23 23:34:36,793] INFO - \n",
+      "Fine-tuning Steps:  28%|██▊       | 28/100 [01:17<03:37,  3.02s/it, Best Val. Loss=0.508, Best Val. Score=-0.508, Training Loss=0.425, Val. Loss=0.508, Patience=24, Utilization=0, Grad Norm=5.69][2025-10-07 22:54:44,197] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [03:03,  1.83s/it, Best Val. Loss=0.461, Best Val. Score=-0.461, Training Loss=0.395, Val. Loss=0.461, Patience=-48, Utilization=0, Grad Norm=8.14]                         \n",
-      "[2025-09-23 23:37:00,544] INFO - Initial Validation Loss: 0.5935690765318904 Best Validation Loss: 0.46058942037713024 Total Steps: 101 Best Step: 100 Total Time Spent: 185.22291922569275\n"
+      "Fine-tuning Steps: 101it [04:36,  2.76s/it, Best Val. Loss=0.458, Best Val. Score=-0.458, Training Loss=0.444, Val. Loss=0.478, Patience=-48, Utilization=0, Grad Norm=13.4]                         \n",
+      "[2025-10-07 22:58:01,517] INFO - Initial Validation Loss: 0.6059744821076322 Best Validation Loss: 0.4583944388110993 Total Steps: 101 Best Step: 50 Total Time Spent: 278.7322461605072\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy_score (Finetuned): 0.8652173913043478\n"
+      "accuracy_score (Finetuned): 0.8326086956521739\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fine-tuning Steps:   3%|▎         | 3/100 [00:03<02:40,  1.66s/it, Best Val. Loss=0.604, Best Val. Score=-0.604, Training Loss=0.43, Val. Loss=0.613, Patience=48, Utilization=0, Grad Norm=9.77][2025-09-23 23:37:10,131] INFO - \n",
+      "Fine-tuning Steps:   3%|▎         | 3/100 [00:04<03:41,  2.28s/it, Best Val. Loss=0.602, Best Val. Score=-0.602, Training Loss=0.435, Val. Loss=0.636, Patience=48, Utilization=0, Grad Norm=4.9][2025-10-07 22:58:15,138] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  14%|█▍        | 14/100 [00:25<02:46,  1.93s/it, Best Val. Loss=0.538, Best Val. Score=-0.538, Training Loss=0.452, Val. Loss=0.538, Patience=38, Utilization=0, Grad Norm=7.21][2025-09-23 23:37:32,189] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [02:45,  1.66s/it, Best Val. Loss=0.503, Best Val. Score=-0.503, Training Loss=0.255, Val. Loss=0.503, Patience=-48, Utilization=0, Grad Norm=5.69]                         \n",
-      "[2025-09-23 23:39:51,566] INFO - Initial Validation Loss: 0.6042756883815655 Best Validation Loss: 0.503314944787894 Total Steps: 101 Best Step: 99 Total Time Spent: 167.3140733242035\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.8478260869565217\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   2%|▏         | 2/100 [00:02<03:16,  2.01s/it, Best Val. Loss=0.524, Best Val. Score=-0.524, Training Loss=0.637, Val. Loss=0.524, Patience=49, Utilization=0, Grad Norm=7.39][2025-09-23 23:39:59,645] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  13%|█▎        | 13/100 [00:21<02:54,  2.00s/it, Best Val. Loss=0.511, Best Val. Score=-0.511, Training Loss=0.53, Val. Loss=0.511, Patience=39, Utilization=0, Grad Norm=8.06] [2025-09-23 23:40:18,795] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [02:45,  1.66s/it, Best Val. Loss=0.455, Best Val. Score=-0.455, Training Loss=0.379, Val. Loss=0.456, Patience=-48, Utilization=0, Grad Norm=6.48]                         \n",
-      "[2025-09-23 23:42:42,553] INFO - Initial Validation Loss: 0.5362367285994355 Best Validation Loss: 0.4547377325446615 Total Steps: 101 Best Step: 90 Total Time Spent: 167.64795780181885\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.8543478260869565\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   2%|▏         | 2/100 [00:02<04:18,  2.64s/it, Best Val. Loss=0.478, Best Val. Score=-0.478, Training Loss=0.549, Val. Loss=0.478, Patience=49, Utilization=0, Grad Norm=7.05][2025-09-23 23:42:51,214] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:   9%|▉         | 9/100 [00:14<02:48,  1.85s/it, Best Val. Loss=0.449, Best Val. Score=-0.449, Training Loss=0.48, Val. Loss=0.449, Patience=43, Utilization=0, Grad Norm=13.9] [2025-09-23 23:43:03,547] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  26%|██▌       | 26/100 [00:45<02:05,  1.70s/it, Best Val. Loss=0.397, Best Val. Score=-0.397, Training Loss=0.505, Val. Loss=0.42, Patience=27, Utilization=0, Grad Norm=31.4] [2025-09-23 23:43:34,345] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [02:50,  1.70s/it, Best Val. Loss=0.377, Best Val. Score=-0.377, Training Loss=0.29, Val. Loss=0.39, Patience=-47, Utilization=0, Grad Norm=4.08]                          \n",
-      "[2025-09-23 23:45:37,702] INFO - Initial Validation Loss: 0.5028540863596721 Best Validation Loss: 0.37733133012739 Total Steps: 101 Best Step: 59 Total Time Spent: 171.71857380867004\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.8478260869565217\n"
+      "Fine-tuning Steps:   9%|▉         | 9/100 [00:26<05:29,  3.62s/it, Best Val. Loss=0.578, Best Val. Score=-0.578, Training Loss=0.548, Val. Loss=0.589, Patience=43, Utilization=0, Grad Norm=9.01]"
      ]
     }
    ],
    "source": [
     "accuracy_scores = []\n",
-    "for seed in range(5):\n",
+    "for seed in range(1):\n",
     "    torch.manual_seed(seed)\n",
     "    train_len = int(len(dataset) * 0.8)\n",
     "    test_len = len(dataset) - train_len\n",
@@ -203,7 +153,7 @@
     "\n",
     "    torch.cuda.empty_cache()\n",
     "\n",
-    "    save_path_to_fine_tuned_model = \"./finetuned_mmpfn_pad_ufes_20.ckpt\"\n",
+    "    save_path_to_fine_tuned_model = \"./checkpoints/finetuned_mmpfn_pad_ufes_20.ckpt\"\n",
     "    \n",
     "    fine_tune_mmpfn(\n",
     "        # path_to_base_model=\"auto\",\n",
@@ -252,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "33aa39dd",
    "metadata": {},
    "outputs": [
@@ -275,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "297dfce2",
    "metadata": {},
    "outputs": [],
