change mmpfn_v2 to mmpfn

--- a/mmpfn/old_scripts/run_pad_ufes_20_multimodal.ipynb
+++ b/mmpfn/old_scripts/run_pad_ufes_20_multimodal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8292ed9d",
    "metadata": {},
    "outputs": [
@@ -36,9 +36,9 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from mmpfn.models.mmpfn_v2 import MMPFNClassifier\n",
-    "from mmpfn.models.mmpfn_v2.constants import ModelInterfaceConfig\n",
-    "from mmpfn.models.mmpfn_v2.preprocessing import PreprocessorConfig\n",
+    "from mmpfn.models.mmpfn import MMPFNClassifier\n",
+    "from mmpfn.models.mmpfn.constants import ModelInterfaceConfig\n",
+    "from mmpfn.models.mmpfn.preprocessing import PreprocessorConfig\n",
     "from mmpfn.scripts_finetune_mm.finetune_mmpfn_main import fine_tune_mmpfn"
    ]
   },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "868f0040",
    "metadata": {},
    "outputs": [
@@ -84,47 +84,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fine-tuning Steps:   8%|▊         | 8/100 [00:18<03:53,  2.54s/it, Best Val. Loss=0.541, Best Val. Score=-0.541, Training Loss=0.618, Val. Loss=0.567, Patience=43, Utilization=0, Grad Norm=6.88][2025-10-07 22:49:33,876] INFO - \n",
+      "Fine-tuning Steps:   5%|▌         | 5/100 [00:10<04:08,  2.61s/it, Best Val. Loss=0.555, Best Val. Score=-0.555, Training Loss=0.544, Val. Loss=0.555, Patience=46, Utilization=0, Grad Norm=9.47][2025-10-07 22:58:58,167] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  20%|██        | 20/100 [00:45<03:06,  2.33s/it, Best Val. Loss=0.541, Best Val. Score=-0.541, Training Loss=0.498, Val. Loss=0.547, Patience=32, Utilization=0, Grad Norm=9]   [2025-10-07 22:50:00,871] INFO - \n",
+      "Fine-tuning Steps:  22%|██▏       | 22/100 [00:53<03:13,  2.48s/it, Best Val. Loss=0.51, Best Val. Score=-0.51, Training Loss=0.536, Val. Loss=0.521, Patience=30, Utilization=0, Grad Norm=14.2]  [2025-10-07 22:59:41,169] INFO - \n",
       "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [04:03,  2.43s/it, Best Val. Loss=0.519, Best Val. Score=-0.519, Training Loss=0.403, Val. Loss=0.535, Patience=-48, Utilization=0, Grad Norm=10.5]                         \n",
-      "[2025-10-07 22:53:17,158] INFO - Initial Validation Loss: 0.5909833408115309 Best Validation Loss: 0.5194899919954977 Total Steps: 101 Best Step: 86 Total Time Spent: 247.18138122558594\n"
+      "Fine-tuning Steps: 101it [03:57,  2.38s/it, Best Val. Loss=0.488, Best Val. Score=-0.488, Training Loss=0.402, Val. Loss=0.533, Patience=-48, Utilization=0, Grad Norm=9.85]                         \n",
+      "[2025-10-07 23:02:43,848] INFO - Initial Validation Loss: 0.5909833408115309 Best Validation Loss: 0.48776229610334626 Total Steps: 101 Best Step: 39 Total Time Spent: 240.92044234275818\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy_score (Finetuned): 0.8739130434782608\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   1%|          | 1/100 [00:00<?, ?it/s][2025-10-07 22:53:26,579] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:  28%|██▊       | 28/100 [01:17<03:37,  3.02s/it, Best Val. Loss=0.508, Best Val. Score=-0.508, Training Loss=0.425, Val. Loss=0.508, Patience=24, Utilization=0, Grad Norm=5.69][2025-10-07 22:54:44,197] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps: 101it [04:36,  2.76s/it, Best Val. Loss=0.458, Best Val. Score=-0.458, Training Loss=0.444, Val. Loss=0.478, Patience=-48, Utilization=0, Grad Norm=13.4]                         \n",
-      "[2025-10-07 22:58:01,517] INFO - Initial Validation Loss: 0.6059744821076322 Best Validation Loss: 0.4583944388110993 Total Steps: 101 Best Step: 50 Total Time Spent: 278.7322461605072\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy_score (Finetuned): 0.8326086956521739\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning Steps:   3%|▎         | 3/100 [00:04<03:41,  2.28s/it, Best Val. Loss=0.602, Best Val. Score=-0.602, Training Loss=0.435, Val. Loss=0.636, Patience=48, Utilization=0, Grad Norm=4.9][2025-10-07 22:58:15,138] INFO - \n",
-      "Optimizer step skipped due to NaNs/infs in grad scaling.\n",
-      "Fine-tuning Steps:   9%|▉         | 9/100 [00:26<05:29,  3.62s/it, Best Val. Loss=0.578, Best Val. Score=-0.578, Training Loss=0.548, Val. Loss=0.589, Patience=43, Utilization=0, Grad Norm=9.01]"
+      "accuracy_score (Finetuned): 0.8673913043478261\n"
      ]
     }
    ],
@@ -202,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "33aa39dd",
    "metadata": {},
    "outputs": [
@@ -210,8 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Accuracy: 0.8560869565217392\n",
-      "Std Accuracy: 0.007826086956521745\n"
+      "Mean Accuracy: 0.8673913043478261\n",
+      "Std Accuracy: 0.0\n"
      ]
     }
    ],
@@ -221,57 +193,6 @@
     "std_accuracy = np.std(accuracy_scores)\n",
     "print(\"Mean Accuracy:\", mean_accuracy)\n",
     "print(\"Std Accuracy:\", std_accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "297dfce2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1/128/24\n",
-    "# Mean Accuracy: 0.8352173913043478\n",
-    "# Std Accuracy: 0.008630188365773572\n",
-    "# 1/128/16\n",
-    "# Mean Accuracy: 0.8400000000000001\n",
-    "# Std Accuracy: 0.02477116440564191\n",
-    "# 1/64/16\n",
-    "# Mean Accuracy: 0.837391304347826\n",
-    "# Std Accuracy: 0.01623317800225605\n",
-    "# 1/64/16\n",
-    "# Mean Accuracy: 0.8282608695652174\n",
-    "# Std Accuracy: 0.015736487887699012\n",
-    "# 1/64/8\n",
-    "# Mean Accuracy: 0.8273913043478262\n",
-    "# Std Accuracy: 0.016186530842596754\n",
-    "# 2/64/16\n",
-    "# Mean Accuracy: 0.8382608695652174\n",
-    "# Std Accuracy: 0.01893177483224106\n",
-    "# 2/128/16\n",
-    "# Mean Accuracy: 0.8382608695652174\n",
-    "# Std Accuracy: 0.01893177483224106\n",
-    "# Mean Accuracy: 0.8469565217391304\n",
-    "# Std Accuracy: 0.02403526080188738\n",
-    "# 2/128/8\n",
-    "# Mean Accuracy: 0.8482608695652173\n",
-    "# Std Accuracy: 0.015273189626304612\n",
-    "# 2/192/12\n",
-    "# Mean Accuracy: 0.8478260869565217\n",
-    "# Std Accuracy: 0.022717131265414168\n",
-    "# 2/128/12\n",
-    "# Mean Accuracy: 0.8486956521739131\n",
-    "# Std Accuracy: 0.017150506889839996\n",
-    "# 2/64/12\n",
-    "# Mean Accuracy: 0.8404347826086956\n",
-    "# Std Accuracy: 0.018981634741689644\n",
-    "# 1/128/12\n",
-    "# Mean Accuracy: 0.8417391304347825\n",
-    "# Std Accuracy: 0.015998582167803577\n",
-    "# MGM 12\n",
-    "# Mean Accuracy: 0.8330434782608694\n",
-    "# Std Accuracy: 0.01292701630201609\n",
-    "# MGM 8"
    ]
   }
  ],
