--- a/mmpfn/old_scripts/run_pawpularity_multimodal.ipynb
+++ b/mmpfn/old_scripts/run_pawpularity_multimodal.ipynb
@@ -32,9 +32,9 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.metrics import r2_score, root_mean_squared_error\n",
-    "from mmpfn.models.mmpfn_v2 import MMPFNRegressor\n",
-    "from mmpfn.models.mmpfn_v2.constants import ModelInterfaceConfig\n",
-    "from mmpfn.models.mmpfn_v2.preprocessing import PreprocessorConfig\n",
+    "from mmpfn.models.mmpfn import MMPFNRegressor\n",
+    "from mmpfn.models.mmpfn.constants import ModelInterfaceConfig\n",
+    "from mmpfn.models.mmpfn.preprocessing import PreprocessorConfig\n",
     "from mmpfn.scripts_finetune_mm.finetune_tabpfn_main import fine_tune_mmpfn"
    ]
   },
