--- a/mmpfn/old_scripts/5.adoption_emb_gen.ipynb
+++ b/mmpfn/old_scripts/5.adoption_emb_gen.ipynb
@@ -33,10 +33,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, log_loss, roc_auc_score, root_mean_squared_error\n",
     "\n",
-    "from mmpfn.models.mmpfn_v2 import MMPFNClassifier\n",
+    "from mmpfn.models.mmpfn import MMPFNClassifier\n",
     "from mmpfn.models.dino_v2.models.vision_transformer import vit_base\n",
-    "from mmpfn.models.mmpfn_v2.constants import ModelInterfaceConfig\n",
-    "from mmpfn.models.mmpfn_v2.preprocessing import PreprocessorConfig\n",
+    "from mmpfn.models.mmpfn.constants import ModelInterfaceConfig\n",
+    "from mmpfn.models.mmpfn.preprocessing import PreprocessorConfig\n",
     "from mmpfn.scripts_finetune_mm.finetune_tabpfn_main import fine_tune_tabpfn"
    ]
   },
