--- a/mmpfn/old_scripts/run_cbis_ddsm_calc_image_head.ipynb
+++ b/mmpfn/old_scripts/run_cbis_ddsm_calc_image_head.ipynb
@@ -35,9 +35,9 @@
     "\n",
     "\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
-    "from mmpfn.models.mmpfn_v2 import MMPFNClassifier\n",
-    "from mmpfn.models.mmpfn_v2.constants import ModelInterfaceConfig\n",
-    "from mmpfn.models.mmpfn_v2.preprocessing import PreprocessorConfig\n",
+    "from mmpfn.models.mmpfn import MMPFNClassifier\n",
+    "from mmpfn.models.mmpfn.constants import ModelInterfaceConfig\n",
+    "from mmpfn.models.mmpfn.preprocessing import PreprocessorConfig\n",
     "from mmpfn.scripts_finetune_mm.finetune_tabpfn_main import fine_tune_tabpfn"
    ]
   },
