--- a/mmpfn/old_scripts/run_prod_text.ipynb
+++ b/mmpfn/old_scripts/run_prod_text.ipynb
@@ -36,9 +36,9 @@
     "import pandas as pd\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from mmpfn.models.mmpfn_v2 import MMPFNClassifier\n",
-    "from mmpfn.models.mmpfn_v2.constants import ModelInterfaceConfig\n",
-    "from mmpfn.models.mmpfn_v2.preprocessing import PreprocessorConfig\n",
+    "from mmpfn.models.mmpfn import MMPFNClassifier\n",
+    "from mmpfn.models.mmpfn.constants import ModelInterfaceConfig\n",
+    "from mmpfn.models.mmpfn.preprocessing import PreprocessorConfig\n",
     "from mmpfn.scripts_finetune_mm.finetune_tabpfn_main import fine_tune_tabpfn"
    ]
   },
