change to cross attention pooler

--- a/mmpfn/old_scripts/run_petfinder_multimodal_image.ipynb
+++ b/mmpfn/old_scripts/run_petfinder_multimodal_image.ipynb
@@ -141,9 +141,9 @@
     "        show_training_curve=False,  # Shows a final report after finetuning.\n",
     "        logger_level=0,  # Shows all logs, higher values shows less\n",
     "        freeze_input=True,  # Freeze the input layers (encoder and y_encoder) during finetuning\n",
-    "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
+    "        mixer_type='MGM+CAP', # MGM MGM+CAP\n",
     "        mgm_heads=128,\n",
-    "        cqam_heads=16,\n",
+    "        cap_heads=16,\n",
     "    )\n",
     "\n",
     "    # disables preprocessing at inference time to match fine-tuning\n",
@@ -157,9 +157,9 @@
     "        model_path=save_path_to_fine_tuned_model,\n",
     "        inference_config=no_preprocessing_inference_config,\n",
     "        ignore_pretraining_limits=True,\n",
-    "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
+    "        mixer_type='MGM+CAP', # MGM MGM+CAP\n",
     "        mgm_heads=128,\n",
-    "        cqam_heads=16,\n",
+    "        cap_heads=16,\n",
     "    )\n",
     "\n",
     "    clf_finetuned = model_finetuned.fit(X_train, image_train, y_train)\n",
