--- a/mmpfn/old_scripts/run_salary_multimodal.ipynb
+++ b/mmpfn/old_scripts/run_salary_multimodal.ipynb
@@ -222,9 +222,9 @@
     "        show_training_curve=False,  # Shows a final report after finetuning.\n",
     "        logger_level=0,  # Shows all logs, higher values shows less\n",
     "        freeze_input=True,  # Freeze the input layers (encoder and y_encoder) during finetuning\n",
-    "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
+    "        mixer_type='MGM+CAP', # MGM MGM+CAP\n",
     "        mgm_heads=8,\n",
-    "        cqam_heads=4,\n",
+    "        cap_heads=4,\n",
     "    )\n",
     "\n",
     "    # disables preprocessing at inference time to match fine-tuning\n",
@@ -238,9 +238,9 @@
     "        model_path=save_path_to_fine_tuned_model,\n",
     "        inference_config=no_preprocessing_inference_config,\n",
     "        ignore_pretraining_limits=True,\n",
-    "        mixer_type='MGM+CQAM', # MGM MGM+CQAM\n",
+    "        mixer_type='MGM+CAP', # MGM MGM+CAP\n",
     "        mgm_heads=8,\n",
-    "        cqam_heads=4,\n",
+    "        cap_heads=4,\n",
     "    )\n",
     "\n",
     "    clf_finetuned = model_finetuned.fit(X_train, text_train, y_train)\n",
